# nubi-connector-contract-bridge

./: Cargo.toml  README.md
aurora/: README.md  hardhat.config.js  package-lock.json  package.json
aurora/contracts/: AuroraTest.sol
aurora/scripts/: deploy.js  deploy_initialize.js  deploy_initialize_near.js  interact.js
aurora/test/: AuroraTest.js
src/: aurora.rs  lib.rs  utils.rs
